<resources>
    <string name="app_name">QR Menu</string>
    <string name="img_logo">img_logo</string>
    <string name="welcome_to_qrtli_orders">Welcome to QRtli Orders</string>
    <string name="manage_customer_orders_in_real_time_accept_or_decline_with_a_tap_and_deliver_faster_service">Manage customer orders in real time. Accept or decline with a tap and deliver faster service.</string>
    <string name="img_bg">img_bg</string>
    <string name="img_leaf">img_leaf</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter Password</string>
    <string name="img_visibility_on">img_visibility_on</string>
    <string name="remember_me">Remember Me</string>
    <string name="img_visibility_off">img_visibility_off</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="login_"><u>Login</u></string>
    <string name="send_otp">Send OTP</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="remember_password">Remember Password?</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="_000000">000000</string>
    <string name="entered_wrong_email">Entered Wrong Email?</string>
    <string name="back"><u>Back</u></string>
    <string name="verify">Verify</string>
    <string name="haven_t_received_the_verification_code">Haven\'t received the verification code?</string>
    <string name="resend_it"><u>Resend it.</u></string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_a_new_password">Set a New Password</string>
    <string name="submit">Submit</string>
    <string name="password_changed">Password Changed!</string>
    <string name="your_password_has_been_changed_successfully_kindly_use_your_new_password_to_login_again">Your Password has been changed successfully. Kindly use your new password to login again.</string>
    <string name="home">Home</string>
    <string name="order_history">Order History</string>
    <string name="profile">Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="log_out">Log Out</string>
    <string name="welcome_rudra">Welcome Rudra!</string>
    <string name="here_is_your_todays_orders">Here is your todays orders...</string>
    <string name="offer_icon">offer_icon</string>
    <string name="menu_icon">menu_icon</string>
    <string name="restaurants_name">Restaurants Name</string>
    <string name="grab_50_off_deals">Grab 50% Off deals</string>
    <string name="above_200_offer_only_on_selected_items">Above ₹200 / Offer only on selected Items</string>
    <string name="_3_3">3/3</string>
    <string name="new_orders_10">New Orders (10)</string>
    <string name="in_process_orders_02">In-process Orders (02)</string>
    <string name="table_1">Table 1</string>
    <string name="img_grey_dot">img_grey_dot</string>
    <string name="_4_items">4 items</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="total">Total: ₹234.00</string>
    <string name="rohan_singh">Rohan Singh</string>
    <string name="_91_0987654321">+91 0987654321</string>
    <string name="accept">Accept</string>
    <string name="img_accept">img_accept</string>
    <string name="img_reject">img_reject</string>
    <string name="reject">Decline</string>
    <string name="img_back_arrow">img_back_arrow</string>
    <string name="order_detail">Order Detail</string>
    <string name="new_">New</string>
    <string name="_1234">#1234</string>
    <string name="_08_sep_2025">08 Sep 2025</string>
    <string name="food_menu">Food Menu</string>
    <string name="alder_grilled_chinook_salmon">Alder Grilled Chinook Salmon</string>
    <string name="full">Full</string>
    <string name="_100">₹100</string>
    <string name="_50">₹50</string>
    <string name="_900">₹900</string>
    <string name="_1050">₹1050</string>
    <string name="_1">1</string>
    <string name="img_veg_sign">img_veg_sign</string>
    <string name="bar_menu">Bar Menu</string>
    <string name="chivas_regal">Chivas Regal</string>
    <string name="_30_ml">30 ml</string>
    <string name="_2">2</string>
    <string name="item_total">Item Total</string>
    <string name="_4">4</string>
    <string name="completed">Completed</string>
    <string name="r">R</string>
    <string name="rudra">Rudra</string>
    <string name="rudra007_gmail_com">rudra007@gmail.com</string>
    <string name="accept_order">Accept Order!</string>
    <string name="are_you_sure_you_want_to_accept_the_order_1234">Are you sure you want to Accept the Order #1234?</string>
    <string name="decline_order">Decline Order!</string>
    <string name="are_you_sure_you_want_to_decline_the_order_1234">Are you sure you want to Decline the Order #1234?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_mark_the_order_1234_as_done">Are you sure you want to mark the Order #1234 as done?</string>
    <string name="save">Save</string>
    <string name="are_you_sure_you_want_to_update_the_changes">Are you sure you want to update the changes?</string>
    <string name="are_you_sure_you_want_to_save_the_changes_password_you_have_to_login_again_to_continue_using_the_application">Are you sure you want to Save the Changes Password? You have to login again to continue using the application?</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="filter_by">Filter By</string>
    <string name="img_filter">img_filter</string>
    <string name="_09_sep_2025">09/Sep/2025</string>
    <string name="orders_12_2340">Orders: 12 (₹2340)</string>
    <string name="accepted">Accepted</string>
    <string name="personal_info">Personal Info</string>
    <string name="full_name">Full Name</string>
    <string name="enter">enter</string>
    <string name="email_id">Email Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="_91">+91</string>
    <string name="_0000000000">0000000000</string>
    <string name="change_password">Change Password</string>
    <string name="_start_">********</string>
    <string name="new_password">New Password</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="img_cross">img_cross</string>
    <string name="reset_all"><u>Reset all</u></string>
    <string name="order_date">Order Date</string>
    <string name="order_status">Order Status</string>
    <string name="img_arrow_up">img_arrow_up</string>
    <string name="all">All</string>
    <string name="declined">Declined</string>
    <string name="dd_mm_yyyy_dd_mm_yyyy">dd/mm/yyyy - dd/mm/yyyy</string>
    <string name="apply">Apply</string>
    <string name="today_s_orders">Today\'s Orders</string>
    <string name="_12">12</string>
    <string name="today_s_revenue">Today\'s Revenue</string>
    <string name="_800">₹800</string>
    <string name="img_calender_bottom_sheet">img_calender_bottom_sheet</string>
</resources>