<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />

        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_terms"
            android:title="@string/terms_amp_conditions" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/log_out" />
</menu>
