<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="20dp">

    <TextView
        android:id="@+id/txt_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by"
        android:textColor="@color/txt_black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_all"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/txt_heading"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/view_line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/view_line_color_2"
        app:layout_constraintTop_toBottomOf="@id/txt_heading" />

    <TextView
        android:id="@+id/txt_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/order_status"
        android:textColor="@color/txt_black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/view_line_1"
        app:layout_constraintTop_toBottomOf="@id/view_line_1" />

    <ImageView
        android:id="@+id/img_arrow_up_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/img_arrow_up"
        android:src="@drawable/img_arrow_up"
        app:layout_constraintBottom_toBottomOf="@id/txt_order_status"
        app:layout_constraintEnd_toEndOf="@id/view_line_1"
        app:layout_constraintTop_toTopOf="@id/txt_order_status" />

    <TextView
        android:id="@+id/txt_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_text_purple"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp"
        android:text="@string/all"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/txt_order_status"
        app:layout_constraintTop_toBottomOf="@id/txt_order_status" />

    <TextView
        android:id="@+id/txt_accepted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/bg_text_normal"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp"
        android:text="@string/accepted"
        android:textColor="@color/new_grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/txt_all"
        app:layout_constraintStart_toEndOf="@id/txt_all" />

    <TextView
        android:id="@+id/txt_declined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/bg_text_normal"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp"
        android:text="@string/declined"
        android:textColor="@color/new_grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/txt_accepted"
        app:layout_constraintStart_toEndOf="@id/txt_accepted" />

    <View
        android:id="@+id/view_line_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@id/txt_all" />

    <TextView
        android:id="@+id/txt_order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/order_date"
        android:textColor="@color/txt_black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/view_line_2"
        app:layout_constraintTop_toBottomOf="@id/view_line_2" />

    <ImageView
        android:id="@+id/img_arrow_up_2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/img_arrow_up"
        android:src="@drawable/img_arrow_up"
        app:layout_constraintBottom_toBottomOf="@id/txt_order_date"
        app:layout_constraintEnd_toEndOf="@id/view_line_2"
        app:layout_constraintTop_toTopOf="@id/txt_order_date" />

    <TextView
        android:id="@+id/txt_date_from_to"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_profile_fields"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:text="@string/dd_mm_yyyy_dd_mm_yyyy"
        android:textColor="@color/txt_grey"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/txt_order_date" />

    <ImageView
        android:id="@+id/img_calender"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/img_calender_bottom_sheet"
        android:src="@drawable/img_calender_bottom_sheet"
        app:layout_constraintBottom_toBottomOf="@id/txt_date_from_to"
        app:layout_constraintEnd_toEndOf="@id/txt_date_from_to"
        app:layout_constraintTop_toTopOf="@id/txt_date_from_to" />

    <CalendarView
        android:id="@+id/calender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_profile_fields"
        app:layout_constraintTop_toBottomOf="@id/txt_date_from_to" />

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/apply"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calender" />

</androidx.constraintlayout.widget.ConstraintLayout>